# Macros

./: Cargo.toml  LICENSE
core/: Cargo.toml
core/src/: lib.rs
lib/: Cargo.toml
lib/src/: func_struct.rs  lib.rs  static_parser.rs  str_to_cstr.rs  struct_literal.rs
